# CICD

./: setup.cfg  setup.py  test  tox.ini
ansible/: gather-facts.yml  site.yml  xcicd-host.yml
ansible/group_vars/: all.yml
ansible/inventory/: all-in-one  multinode
ansible/roles/baremetal/defaults/: main.yml
ansible/roles/baremetal/tasks/: bootstrap-servers.yml  change_aliyun_os_repo.yml  main.yml  pre-install.yml
ansible/roles/prechecks/tasks/: main.yml
ansible/roles/redmine/tasks/: check.yml
doc/: run
etc/: globals.yml
example/actions/: prechecks
example/etc/inventory/: multinode  multinode_remote
tools/: cicd-ansible
