[metadata]
name = cicd-ansible
summary = Ansible Deployment of CICD
description-file =
    README.rst
author = xiaojueguan
author-email = xiaojueguan@gmail.com
home-page = https://github.com/albertjone/CICD
license =
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    cicd_ansible
data_files =
    share/cicd-ansible/ansible = ansible/*
    share/cicd-ansible/doc = doc/*
    share/cicd-ansible/etc_examples = etc/*
    share/cicd-ansible = setup.cfg

scripts =
    tools/cicd-ansible

[entry_points]

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
